fix overflow on show product page

--- a/app/assets/stylesheets/show/show-product.css
+++ b/app/assets/stylesheets/show/show-product.css
@@ -1,28 +1,35 @@
 .show-product-main {
   display: block;
-  width: 100%;
-  min-width: 1000px;
   padding: 20px;
   vertical-align: top;
 }
+.product-image-specs-cart-wrapper {
+  min-width: 1000px;
+  display: block;
+  margin: 30px 0;
+}
 
 .product-image-specs-wrapper {
-  margin: 30px 0;
+  display: block;
+  max-width: 70%;
+  float: left;
 }
 /* image */
 
 .product-image-index {
-  display: inline-block;
-  max-width: 40%;
+  display: block;
+  max-width: 50%;
   min-width: 400px;
+  float: left;
 }
 
 /* specs */
 
 .product-specs-wrapper {
-  display: inline-block;
-  max-width: 30%;
+  display: block;
+  max-width: 50%;
   min-width: 300px;
+  float: left;
 }
 
 .product-name {
@@ -55,8 +62,8 @@
 .spec-list {
   line-height: 1.166;
   display: block;
+  margin-left: 15px;
   list-style: circle;
-  margin: 0 20px;
 }
 
 .spec-item {
@@ -66,10 +73,11 @@
 /* mgmt form */
 
 .form-outer-box {
-  display: inline-block;
-  max-width: 40%;
-  min-width: 400px;
+  display: block;
+  max-width: 30%;
+  min-width: 300px;
   height: 100%;
+  float: left;
 }
 
 
